# nu_plugin_jwalk

./: Cargo.toml  README.md
src/: jwalk.rs  main.rs
