[package]
name = "nu_plugin_jwalk"
version = "0.4.0"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_jwalk"
description = "a nushell plugin called jwalk"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.8.1"
# for local development, you can use a path dependency
nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.91.1" }
nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.91.1" }
chrono = "0.4.31"
omnipath = "0.1.6"
# nu-plugin = "0.80.0"
# nu-protocol = "0.80.0"

